# 1-projeto-csv-parquet

./: README.md  etl.py  pyproject.toml
data/: coleta_dia01.json  coleta_dia02.json  coleta_dia03.json
