package-mode = false

[project]
name = "projeto-teste"
version = "0.1.0"
description = ""
authors = [
    {name = "Tu Nombre",email = "rapsful@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pandas (>=3.0.3,<4.0.0)", "tabulate (>=0.10.0,<0.11.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"