[tool.poetry]
name = "projeto-teste"
version = "0.1.0"
description = ""
authors = ["Tu Nombre <rapsful@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^3.0.3"
tabulate = "^0.10.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"